--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   web:
     build: .
     ports:
-      - "80:80"  # Expose port 80 of the container to port 80 on the host
+      - "80:80"
     volumes:
-      - ./build:/usr/share/nginx/html  # Mount the build directory to Nginx's static folder
-    restart: always  # Ensures the container restarts if it crashes or stops
+      - ./build:/usr/share/nginx/html
+    restart: always
 
